objects/Early_Warning_Status__c.object
<CustomObject>
    <fields>
        <fullName>APPR_COMMENTS__c</fullName>
        <label>APPR COMMENTS</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVAIL_DATE__c</fullName>
        <label>Available Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Sales_Order1__r.Sales_Order_Line__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Short_Name__c</fullName>
        <formula>Sales_Order1__r.Sales_Order_Line__r.Account__r.Short_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Short Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_Quantity__c</fullName>
        <label>Available Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COMMENT__c</fullName>
        <label>COMMENT</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSR_TIMESTAMP__c</fullName>
        <label>CSR TIMESTAMP</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSR_USER_ID__c</fullName>
        <label>CSR USER ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commit_Date__c</fullName>
        <formula>Sales_Order1__r.Confirmed_Date__c</formula>
        <label>Commit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commit_Quantity__c</fullName>
        <formula>Sales_Order1__r.Cum_Cf_Qty__c</formula>
        <label>Commit Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cust_PN__c</fullName>
        <formula>Sales_Order1__r.Sales_Order_Line__r.Cust_Part__c</formula>
        <label>Customer Part#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <formula>Sales_Order1__r.SalesOrder_Account__c</formula>
        <label>Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EARLY_SHIP_FLAG__c</fullName>
        <label>EARLY SHIP FLAG</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EWS_FLAG__c</fullName>
        <label>EWS FLAG</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>O</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EW_Status__c</fullName>
        <label>EW Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Late</fullName>
                </value>
                <value>
                    <fullName>Early</fullName>
                </value>
                <value>
                    <fullName>On time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Comments__c</fullName>
        <label>External Comments</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extrnal_Reason_Code__c</fullName>
        <label>External Reason Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IS_ACTIVE_VERSION__c</fullName>
        <label>IS ACTIVE VERSION</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IS_EWS_CHANGED__c</fullName>
        <label>IS EWS CHANGED</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IS_SCM_MAIL_SENT__c</fullName>
        <label>IS SCM MAIL SENT</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IS_USER_MAIL_SENT__c</fullName>
        <label>IS USER MAIL SENT</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Comments__c</fullName>
        <label>Internal Comments</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Reason_Code__c</fullName>
        <label>Internal Reason Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Delivered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Delivered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Latest_Version__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Latest Version</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAST_TIMESTAMP__c</fullName>
        <label>LAST TIMESTAMP</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LAST_USER__c</fullName>
        <label>LAST USER</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Item__c</fullName>
        <formula>Sales_Order1__r.Sales_Order_Line__r.Itm_Number__c</formula>
        <label>Line Item</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Item__c</fullName>
        <formula>Sales_Order1__r.Sales_Order_Line__r.PO_ITEM_NO__c</formula>
        <label>PO Item</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <formula>Cust_PN__c+&apos; &apos;+&apos;:&apos;+&apos; &apos;+ Sales_Order1__r.Part__c +&apos; &apos;+&apos;:&apos;+&apos; &apos;+ Sales_Order1__r.Sales_Order_Line__r.Part_Desc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part List</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <formula>Sales_Order1__r.Sales_Order_Line__r.Purch_No__c</formula>
        <label>Purchase Order</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REASON_CODE__c</fullName>
        <label>REASON CODE</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCHED_LINE_SPLIT__c</fullName>
        <label>Scheduled LINE SPLIT</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCM_TIMESTAMP__c</fullName>
        <label>SCM TIMESTAMP</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SCM_USER_ID__c</fullName>
        <label>SCM USER ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATUS_FLAG__c</fullName>
        <label>STATUS FLAG</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order1__c</fullName>
        <label>Sales Order</label>
        <referenceTo>Sales_Order_Schedule__c</referenceTo>
        <relationshipLabel>Early Warning Status</relationshipLabel>
        <relationshipName>Early_Warning_Status</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <formula>Sales_Order1__r.Sales_Order_Line__r.Doc_Number__c</formula>
        <label>Sales Order</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Line__c</fullName>
        <formula>Sales_Order1__r.SCHED_LINE__c</formula>
        <label>Scheduled Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TBD_FLAG__c</fullName>
        <label>TBD FLAG</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TXN_ID__c</fullName>
        <externalId>true</externalId>
        <label>TXN ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Version_ID__c</fullName>
        <label>Version ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Early Warning Status</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Name__c</field>
            <operation>contains</operation>
            <value>test</value>
        </filters>
        <label>my EW</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Early Warning Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Early Warning Status</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Record_not_editable</fullName>
        <active>true</active>
        <errorConditionFormula>Is_Delivered__c =true &amp;&amp; ISCHANGED(LastModifiedDate)</errorConditionFormula>
        <errorMessage>Can not edit this record</errorMessage>
    </validationRules>
</CustomObject>